# pkg/router/api.go
@@ -3,17 +3,23 @@ package router
 import (
 	"net/http"
 
-	"github.com/prometheus/client_golang/prometheus/promhttp"
-
 	"github.com/gin-contrib/pprof"
 	"github.com/gin-gonic/gin"
+	"github.com/prometheus/client_golang/prometheus/promhttp"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
+
+	"github.com/crochee/proxy-go/api"
+	_ "github.com/crochee/proxy-go/docs"
 )
 
 // @title PROXY Swagger API
 // @version 1.0
 // @description This is a server API.
+
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name X-Auth-Token
 
 // ApiHandler gin 路由处理
 func ApiHandler() http.Handler {
@@ -30,5 +36,9 @@ func ApiHandler() http.Handler {
 		promhttp.Handler().ServeHTTP(ctx.Writer, ctx.Request)
 	})
 
+	v1router := router.Group("/v1")
+	{
+		v1router.GET("/nodes", api.GetBalanceNode)
+	}
 	return router
 }
